# reddarr

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.tests  KILO_PLAN.md  README.md  code-feedback.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  gemini-critique.md  one-shot.sh  one-shot.tests.sh  patch_modal.py  pyproject.toml  query_test.py  reddarr-logs.txt  requirements.txt  targets.txt  upgrade-plan-v2.md  upgrade-plan.md
.kilo/: AGENTS.md
alembic/: script.py.mako
backup/: entrypoint.sh  restore.sh
backups-borg-new/: borg.db
borgmatic/: config.yaml
db/: init.sql  migrate_v2.sql  migrate_v2_1.sql
docs/: SCHEMA.md  api.md  architecture.md
downloader/: Dockerfile  app.py  db.py  media_utils.py
downloader.v1.bak/: app.py  media_utils.py  providers.py  requirements.txt
ingester.v1.bak/: app.py  db.py  (+2 more)
reddarr-v2-skeleton/: .env.example  Dockerfile  MIGRATION.md  docker-compose.yml  pyproject.toml
reddarr-v2-skeleton/alembic/: env.py
reddarr-v2-skeleton/prometheus/: prometheus.yml
reddarr-v2-skeleton/reddarr/: __init__.py  config.py  database.py  models.py
reddarr-v2-skeleton/reddarr/api/: app.py  auth.py
reddarr-v2-skeleton/reddarr/api/routes/: admin.py  backups.py  media.py  posts.py  system.py  targets.py
reddarr-v2-skeleton/reddarr/services/: reddit.py
reddarr-v2-skeleton/reddarr/services/providers/: base.py  generic.py
reddarr-v2-skeleton/reddarr/tasks/: __init__.py  download.py  ingest.py  maintenance.py
reddarr-v2-skeleton/reddarr/utils/: media.py  metrics.py
(+86 files in other folders)
